changing the app config file